--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Google Maps API Key
 # Obtener desde: https://console.cloud.google.com/
 # Habilitar APIs: Maps JavaScript API, Geocoding API, Directions API
-GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+GOOGLE_MAPS_API_KEY=
 
